# airflow-layout-exp

./: main.py  pyproject.toml
dags/: README.md  ingest_accounts.py  ingest_sys_a_customers.py  ingest_sys_b_customers.py  integrate_customers.py
images/: README.md
images/integrate-customer/: Dockerfile  main.py
